# playlist-downloader

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_yt_dlp.sh
src/playlist_downloader/: __init__.py
